--- a/index.html
+++ b/index.html
@@ -34,5 +34,7 @@
 
   <script src="js/data.js"></script>
   <script src="js/app.js"></script>
+  <link rel="stylesheet" href="css/style.css" />
 </body>
 </html>
+
