--- a/index.html
+++ b/index.html
@@ -6,35 +6,17 @@
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-  <h1>時間割チェッカー（テスト版）</h1>
+  <div class="container">
+    <h1>現在の授業</h1>
 
-  <!-- まずは「曜日＋時刻を自分で入力して判定」だけ作る -->
-  <form id="check-form">
-    <div>
-      <label for="weekday">曜日:</label>
-      <select id="weekday">
-        <option value="mon">月</option>
-        <option value="tue">火</option>
-        <option value="wed">水</option>
-        <option value="thu">木</option>
-        <option value="fri">金</option>
-      </select>
+    <div id="result" class="card">
+      読み込み中…
     </div>
-
-    <div>
-      <label for="time">時刻:</label>
-      <!-- とりあえず手動入力でテストしやすく -->
-      <input type="time" id="time" required />
-    </div>
-
-    <button type="submit">判定する</button>
-  </form>
-
-  <div id="result"></div>
+  </div>
 
   <script src="js/data.js"></script>
   <script src="js/app.js"></script>
-  <link rel="stylesheet" href="css/style.css" />
 </body>
 </html>
+
 
