--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>時間割チェッカー（新プロジェクト）</title>
+  <title>時間割を教えます</title>
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
@@ -18,5 +18,6 @@
   <script src="js/app.js"></script>
 </body>
 </html>
+
 
 
