--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
   </div>
 
   <script src="js/data.js"></script>
+  <script src="js/rooms.js"></script>
   <script src="js/app.js"></script>
 </body>
 </html>
+
 
 
 
