--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
     </div>
   </div>
 
-  <script src="js/data.js"></script>
-  <script src="js/rooms.js"></script>
-  <script src="js/app.js"></script>
+<script src="js/data.js"></script>
+<script src="js/rooms.js"></script>
+<script src="js/items.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
+
 
 
 
