--- a/index.html
+++ b/index.html
@@ -7,19 +7,25 @@
 </head>
 <body>
   <div class="container">
-    <h1>現在の授業</h1>
+    <div id="now" class="now"></div>
 
-    <div id="result" class="card">
-      読み込み中…
+    <div id="main" class="main"></div>
+
+    <div class="sub">
+      <div id="room"></div>
+      <div id="items"></div>
+      <div id="left"></div>
     </div>
   </div>
 
-<script src="js/data.js"></script>
-<script src="js/rooms.js"></script>
-<script src="js/items.js"></script>
-<script src="js/app.js"></script>
+  <script src="js/data.js"></script>
+  <script src="js/rooms.js"></script>
+  <script src="js/items.js"></script>
+  <script src="js/app.js"></script>
 </body>
+
 </html>
+
 
 
 
