--- a/index.html
+++ b/index.html
@@ -19,12 +19,13 @@
   </div>
 
   <script src="js/data.js"></script>
-  <script src="js/rooms.js"></script>
+  <script src="js/room.js"></script>
   <script src="js/items.js"></script>
   <script src="js/app.js"></script>
 </body>
 
 </html>
+
 
 
 
