--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <title>時間割を教えます</title>
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="icon" href="data:,">
 </head>
 <body>
   <div class="container">
@@ -25,6 +26,7 @@
 </body>
 
 </html>
+
 
 
 
